app/styles/restaurants/search-results.scss
.percent-discount {
  color: red;
}
#search-result-link > a {
  &:visited, &:active, &:hover {
    text-decoration: none;
  }
}
.popover-title {
  font-weight: 400;
  font-size: 0.6em;
  font-family: raleway;
  text-decoration: none;
  border: none;
}

.restaurant-box {
  padding: 15px;
  max-height: 600px;

  #search-item-img-container {
    position: relative;

    .restaurant-search-pic {
      position: absolute;
      left: 0px;
      top: 0px;
      z-index: 1;
    }

    .discount-banner {
      position: relative;
      top: 210px;
      left: -15px;
      color: #fff;
      text-align: center;
      background-color: rgba(0,0,0,0.8);
      padding: 10px 5px 10px 5px;
      margin: 80px;
      z-index: 2;

      p {
        margin: 0;
      }
    }
  }

  #restaurant-image {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
    position: relative;
    height: 450px;
    width: 900px;
    box-shadow: none;
    text-shadow: none;

    .discount-banner {
      position: relative;
      top: 250px;
      color: #fff;
      text-align: center;
      background-color: rgba(0,0,0,0.8);
      padding: 10px 5px 10px 5px;
      margin: 60px;

      p.small {
        margin: 0;
      }
    }
  }
}

.popover-content {
  font-weight: 600;
  font-size: 1.5em;
  font-family: raleway;
}

.load-spinner {
  display: none;
  color: #CA9956;
}
#search-results-message {
  margin-top: 0;
}

div.back-link {
  height: 35px;
}

.reserve-button {
  margin-top: 25px;
  margin-right: 30px;
}
#more-restaurants-title {
  text-align: center;
  color: #999;
  margin-top: 50px;
  margin-bottom: 30px;
}

.middle-border {
  border-top: 1px solid #000;
  margin-top: 15px;
}

#search-results-title {
  font-weight: 400;
  padding-right: 0;
  padding-left: 0;
}

.restaurant-box {
  max-height: 375px;
  position: relative;
  overflow: hidden;

  .restaurant-search-pic {
    height: 345px;
    width: 690px;
  }

  #restaurant-list-info {
    margin-top: 60px;
    text-underline: none;
    color: #000;
    position: relative;

    .restaurant-title {
      border-bottom: 1px solid #000;
    }

    .address {
    }

    .normal-description {
      height: 120px;
    }


    button {
      margin-top: 25px;
      margin-right: 10px;
      font-size: 1.25em;
      font-weight: 200;
      box-shadow: none;
    }
  }

  /* The ribbons */

  .corner-ribbon {
    width: 200px;
    position: absolute;
    text-align: center;
    letter-spacing: 1px;
    color: #f0f0f0;
    font-size: 1.5em;

    .gold-border {
      border-top: 1px dashed #CA9956;
      border-bottom: 1px dashed #CA9956;
      margin: 5px 5px;
    }

    /* Custom styles */

    &.top-right {
      top: 15px;
      right: -55px;
      left: auto;
      transform: rotate(45deg);
      -webkit-transform: rotate(45deg);
    }

    &.black {background: #333;}
  }
}


@media (max-width: 1230px) {
  .restaurant-box > #search-item-img-container  > .restaurant-search-pic > .discount-banner {
    top: 205px;
    left: -15px;
    padding: 10px 5px 10px 5px;
    margin: 85px;
  }
}

@media (max-width: 1200px) {
  #search-item-img-container > div > div > div {
    top: 290px !important;
    left: 0px;
    padding: 10px 5px 10px 5px;
    margin: 60px !important;
  }

  #search-item-img-container > div > div > div {
    margin: 0 !important;
  }
}

@media (max-width: 991px) {
  .restaurant-img-container {
    width: 80%;
    height: 100%;
    overflow: hidden; 
    margin: 0 auto;
    padding: 0;
  }

  .restaurant-box {
    padding: 15px;
    max-height: 600px;

    #restaurant-image {
      background-repeat: no-repeat;
      background-size: cover;
      background-position: top;
      height: 300px;
      width: 100%;
      box-shadow: none;
      text-shadow: none;
    }

    .corner-ribbon {
      font-size: 1.5em;
      line-height: 1.3;
      z-index: 2;

      &.top-right {
        top: 10px;
        right: -60px;
      }
      .gold-border {
        border-top: 1px dashed #CA9956;
        border-bottom: 1px dashed #CA9956;
        margin: 3px 5px;
      }
    }

    #restaurant-list-info {
      padding: 0;
      margin-top: 0px;

      .restaurant-title-container {
        margin-top: 5px;

        .restaurant-title {
          font-size: 1.1em;
          margin: 0;
          padding: 0;
        }
      }

      .address {
        font-size: 1.1em;
        font-weight: 900;
      }

      .description {
        font-size: 0.8em;
      }

      button {
        margin-top: 10px;
        margin-right: 0px;
        font-size: 1.2em;
      }
    }
  }
}
#restaurant-list-info > p.visible-md-block.visible-lg-block.normal-description {
  height: 120px;
}

@media (max-width: 600px) {
  .landing-image {
    height: 650px;

    &.logged-in {
      background-image: none;
      background-color: #ECECEC;
    }
  }

  .restaurant-img-container {
    width: 100%;
    height: 100%;
    overflow: hidden; 
    margin: 0 auto;
  }

}

